<resources>
    <string name="app_name">CookingRecipes</string>
    <string name="plus_sign">+</string>
    <string name="name_hint">Give your name a recipe.</string>
    <string name="instructions_hint">How do you make it?</string>
    <string name="ingredients_hint">Ingredients: apple, banana, ... </string>
    <string name="action_settings">Settings</string>
    <string name="image_hint">URL for looks?</string>
</resources>
