<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.lee.cookingrecipes.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Add a Recipe"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"/>
        <EditText
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients_hint"/>
        <EditText
            android:id="@+id/recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instructions_hint"/>
        <EditText
            android:id="@+id/image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_hint"/>
    </LinearLayout>
    <Button
        android:id="@+id/add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="addRecipe"
        android:text="@string/plus_sign">
    </Button>
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideOverlay"></ListView>
</LinearLayout>
